[gd_scene load_steps=4 format=3 uid="uid://dwybfh7m50xee"]

[ext_resource type="Script" path="res://level_test/main_scene.gd" id="1_kn1ea"]
[ext_resource type="PackedScene" uid="uid://dq6tvhqcy2aps" path="res://assetsLibrary/EasyMenus/Scenes/main_menu.tscn" id="2_laxh6"]
[ext_resource type="PackedScene" uid="uid://rw7gdui8lu3n" path="res://assetsLibrary/EasyMenus/Scenes/pause_menu.tscn" id="3_76a11"]

[node name="main_scene" type="Node2D"]
script = ExtResource("1_kn1ea")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource("2_laxh6")]

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("3_76a11")]

[connection signal="start_game_pressed" from="CanvasLayer/MainMenu" to="." method="_on_main_menu_start_game_pressed"]
[connection signal="back_to_main_pressed" from="CanvasLayer/PauseMenu" to="." method="_on_pause_menu_back_to_main_pressed"]
